mnt/airflow/logs/dag_id=etl_pipeline/run_id=manual__2025-03-26T133339.761724+0000/task_id=create_tables_task/attempt=6.log
[2025-04-03T22:08:03.409+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-04-03T22:08:03.445+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_pipeline.create_tables_task manual__2025-03-26T13:33:39.761724+00:00 [queued]>
[2025-04-03T22:08:03.454+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_pipeline.create_tables_task manual__2025-03-26T13:33:39.761724+00:00 [queued]>
[2025-04-03T22:08:03.455+0000] {taskinstance.py:2306} INFO - Starting attempt 6 of 7
[2025-04-03T22:08:03.487+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_tables_task> on 2025-03-26 13:33:39.761724+00:00
[2025-04-03T22:08:03.492+0000] {standard_task_runner.py:63} INFO - Started process 212 to run task
[2025-04-03T22:08:03.495+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_pipeline', 'create_tables_task', 'manual__2025-03-26T13:33:39.761724+00:00', '--job-id', '139', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpxjcjukju']
[2025-04-03T22:08:03.497+0000] {standard_task_runner.py:91} INFO - Job 139: Subtask create_tables_task
[2025-04-03T22:08:03.574+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_pipeline.create_tables_task manual__2025-03-26T13:33:39.761724+00:00 [running]> on host 368b3be21c0d
[2025-04-03T22:08:03.682+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='lobobranco' AIRFLOW_CTX_DAG_ID='etl_pipeline' AIRFLOW_CTX_TASK_ID='create_tables_task' AIRFLOW_CTX_EXECUTION_DATE='2025-03-26T13:33:39.761724+00:00' AIRFLOW_CTX_TRY_NUMBER='6' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-26T13:33:39.761724+00:00'
[2025-04-03T22:08:03.684+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-04-03T22:08:03.704+0000] {sql.py:295} INFO - Executing: CREATE SCHEMA IF NOT EXISTS spotify;

CREATE TABLE IF NOT EXISTS spotify.artist (
    artist_id VARCHAR PRIMARY KEY,
    artist_name VARCHAR NOT NULL,
    external_url VARCHAR
);

CREATE TABLE IF NOT EXISTS spotify.album (
    album_id VARCHAR PRIMARY KEY,
    album_name VARCHAR NOT NULL,
    release_date DATE,
    total_tracks BIGINT,
    url VARCHAR
);

CREATE TABLE IF NOT EXISTS spotify.song (
    song_id VARCHAR PRIMARY KEY,
    song_name VARCHAR NOT NULL,
    duration_ms BIGINT,
    url VARCHAR,s
    popularity BIGINT,
    song_added DATE,
    album_id VARCHAR REFERENCES album(album_id),
    artist_id VARCHAR REFERENCES artist(artist_id)
);
[2025-04-03T22:08:03.717+0000] {base.py:84} INFO - Using connection ID 'postgres_default' for task execution.
[2025-04-03T22:08:03.728+0000] {base.py:84} INFO - Using connection ID 'postgres_default' for task execution.
[2025-04-03T22:08:03.728+0000] {sql.py:186} WARNING - This setter is for backward compatibility and should not be used.
Since the introduction of connection property, the providers listed below breaks due to assigning value to self.connection in their __init__ method.
* apache-***-providers-mysql<5.7.1
* apache-***-providers-elasticsearch<5.5.1
* apache-***-providers-postgres<5.13.0
[2025-04-03T22:08:03.734+0000] {sql.py:511} INFO - Running statement: CREATE SCHEMA IF NOT EXISTS spotify;

CREATE TABLE IF NOT EXISTS spotify.artist (
    artist_id VARCHAR PRIMARY KEY,
    artist_name VARCHAR NOT NULL,
    external_url VARCHAR
);

CREATE TABLE IF NOT EXISTS spotify.album (
    album_id VARCHAR PRIMARY KEY,
    album_name VARCHAR NOT NULL,
    release_date DATE,
    total_tracks BIGINT,
    url VARCHAR
);

CREATE TABLE IF NOT EXISTS spotify.song (
    song_id VARCHAR PRIMARY KEY,
    song_name VARCHAR NOT NULL,
    duration_ms BIGINT,
    url VARCHAR,s
    popularity BIGINT,
    song_added DATE,
    album_id VARCHAR REFERENCES album(album_id),
    artist_id VARCHAR REFERENCES artist(artist_id)
);, parameters: None
[2025-04-03T22:08:03.736+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-04-03T22:08:03.738+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 301, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 467, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 516, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "BIGINT"
LINE 22:     popularity BIGINT,
                        ^

[2025-04-03T22:08:03.752+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_pipeline, task_id=create_tables_task, run_id=manual__2025-03-26T13:33:39.761724+00:00, execution_date=20250326T133339, start_date=20250403T220803, end_date=20250403T220803
[2025-04-03T22:08:03.785+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 139 for task create_tables_task (syntax error at or near "BIGINT"
LINE 22:     popularity BIGINT,
                        ^
; 212)
[2025-04-03T22:08:03.828+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-04-03T22:08:03.852+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-04-03T22:08:03.870+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
